--- a/soalganjil.html
+++ b/soalganjil.html
@@ -110,7 +110,7 @@
 <h2>Form Pemesanan Coffee</h2>
 
 <div class="container">
-  <form action="/action_page.php">
+  <form>
   <div class="row">
     <div class="col-25">
       <label for="nama">Nama Lengkap Pemesan</label>
